# tg_bot_template

./: .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  example.env  main.py  pyproject.toml
internal/callback/: __init__.py
internal/config/: __init__.py  is_admin.py
internal/domain/: user.py
internal/filter/: __init__.py
internal/handler/: command.py  mailing.py
internal/keyboard/: command.py
internal/middleware/: auth.py
internal/repository/: user.py
internal/state/: __init__.py
migration/: 20240124160734_init.up.sql
